--- a/index.html
+++ b/index.html
@@ -11,78 +11,83 @@
 </head>
 <body>
     <header>
-        <img src="imagens/logo.svg" alt="">
-        <nav class="mt-1 mx-auto">
-            <a href="#">Início</a>
-            <a href="#">Cursos</a>
-            <a href="#">Eventos</a>
-            <a href="#">Contatos</a>
-        </nav>
-        <a href="#" class="button mt-1 mx-auto">Se inscreva</a>
+        <div class="container">
+            <img src="imagens/logo.svg" alt="">
+            <nav>
+                <a href="#">Início</a>
+                <a href="#">Cursos</a>
+                <a href="#">Eventos</a>
+                <a href="#">Contatos</a>
+            </nav>
+            <a href="#" class="button mt-1 mx-auto">Se inscreva</a>
+        </div>
     </header>
     <main>
         <section class="hero-section">
             <img src="imagens/hero-img.svg" alt="Jazz tocando">
-            <div>
+            <div class="container row-reverse">
                 <h1>Crie algo <span class="text-primary">impactante</span> com música.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae inventore facilis voluptatum nesciunt tenetur laborum dolorem exercitationem fugit dignissimos eveniet placeat reiciendis doloribus commodi necessitatibus, obcaecati vitae aut quos dolorum.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae inventore facilis voluptatum nesciunt tenetur laborum dolorem exercitationem.</p>
                 <a href="#" class="button">Comece agora</a>
             </div>
         </section>
         <section class="courses-section">
             <div>
-                <article>
+                <article class="card">
                     <img src="imagens/piano.png" alt="">
                     <strong>Piano Popular</strong>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti labore pariatur nulla facere, porro eligendi numquam neque, illum soluta libero voluptatum omnis asperiores consectetur hic laboriosam vel atque veritatis!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti labore pariatur nulla facere, porro eligendi numquam neque!</p>
                     <a href="#">
-                        <img src="imagens/arrow-curve.svg" alt="ir para pagina do curso">
+                        <img src="imagens/arrow-right.svg" alt="ir para pagina do curso">
                     </a>
                 </article>
-                <article>
+                <article class="card">
                     <img src="imagens/clef.png" alt="">
                     <strong>Teoria Musical</strong>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti labore pariatur nulla facere, porro eligendi numquam neque, illum soluta libero voluptatum omnis asperiores consectetur hic laboriosam vel atque veritatis!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti labore pariatur nulla facere, porro eligendi numquam neque, !</p>
                     <a href="#">
-                        <img src="imagens/arrow-curve.svg" alt="ir para pagina do curso">
+                        <img src="imagens/arrow-right.svg" alt="ir para pagina do curso">
                     </a>
                 </article>
-                <article>
+                <article class="card">
                     <img src="imagens/sax.png" alt="saxofone">
                     <strong>Sax Alto</strong>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti labore pariatur nulla facere, porro eligendi numquam neque, illum soluta libero voluptatum omnis asperiores consectetur hic laboriosam vel atque veritatis!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti labore pariatur nulla facere, porro eligendi numquam neque,!</p>
                     <a href="#">
-                        <img src="imagens/arrow-curve.svg" alt="ir para pagina do curso">
+                        <img src="imagens/arrow-right.svg" alt="ir para pagina do curso">
                     </a>
                 </article>
-                <article>
+                <article class="card">
                     <img src="imagens/drums.png" alt="bateria">
                     <strong>Bateria</strong>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti labore pariatur nulla facere, porro eligendi numquam neque, illum soluta libero voluptatum omnis asperiores consectetur hic laboriosam vel atque veritatis!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti labore pariatur nulla facere, porro eligendi numquam neque!</p>
                     <a href="#">
-                        <img src="imagens/arrow-curve.svg" alt="ir para pagina do curso">
+                        <img src="imagens/arrow-right.svg" alt="ir para pagina do curso">
                     </a>
                 </article>
             </div>
-            <h2>E <span class="text-primary">varios</span> outros!</h2>
-            <a href="#">Conhecer os cursos</a>
+            <h2 class="text-center">E <span class="text-primary">varios</span> outros!</h2>
+            <a href="#" class="button mx-auto mt-2">Conhecer os cursos</a>
         </section>
     </main>
     <footer>
-        <div>
-            <img src="imagens/logo.svg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cupiditate, molestias sint odio omnis quos illo doloribus, id laborum neque at molestiae? Tenetur quaerat minima consequuntur delectus pariatur sapiente voluptates?</p>
+        <div class="container">
+            <div class="about-column">
+                <img src="imagens/logo.svg" alt="" class="mb-1 mt-1">
+                <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cupiditate, molestias sint odio omnis quos illo doloribus, id laborum neque at molestiae? Tenetur quaerat minima consequuntur delectus pariatur sapiente voluptates?</p>
+            </div>
+            <nav>
+                <a href="#">Início</a>
+                <a href="#">Cursos</a>
+                <a href="#">Eventos</a>
+                <a href="#">Contatos</a>
+            </nav>
+            <form class="newsletter-form">
+                <label for="email" class="mb-1">Receba materiais gratuitos no seu email.</label>
+                <input type="text" name="email" id="email" placeholder="Digite o seu email">
+                <button class="button mb-2">Quero receber</button>
+            </form>
         </div>
-        <nav>
-            <a href="#">Início</a>
-            <a href="#">Cursos</a>
-            <a href="#">Eventos</a>
-            <a href="#">Contatos</a>
-        </nav>
-        <form>
-            <label for="email">Receba materiais gratuitos no seu email.</label>
-            <input type="text" name="email" id="email" placeholder="Digite o seu email">
-        </form>
     </footer>
 </body>
 </html>
