--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
                 <a href="#">Eventos</a>
                 <a href="#">Contatos</a>
             </nav>
-            <a href="#" class="button mt-1 mx-auto">Se inscreva</a>
+            <a href="#" class="button mt-1 mb-1 mx-auto">Se inscreva</a>
         </div>
     </header>
     <main>
         <section class="hero-section">
-            <img src="imagens/hero-img.svg" alt="Jazz tocando">
             <div class="container row-reverse">
-                <h1>Crie algo <span class="text-primary">impactante</span> com música.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae inventore facilis voluptatum nesciunt tenetur laborum dolorem exercitationem.</p>
-                <a href="#" class="button">Comece agora</a>
+                <img src="imagens/hero-img.svg" alt="Jazz tocando">
+                <div class="container row-reverse">
+                    <h1 class="mt-2">Crie algo <span class="text-primary decoration">impactante</span> com música.</h1>
+                    <p class="mt-2 mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae inventore facilis voluptatum nesciunt tenetur laborum dolorem exercitationem.</p>
+                    <a href="#" class="button">Comece agora</a>
+                </div>
             </div>
         </section>
         <section class="courses-section">
-            <div>
+            <div class="cards">
                 <article class="card">
                     <img src="imagens/piano.png" alt="">
                     <strong>Piano Popular</strong>
@@ -74,7 +76,7 @@
         <div class="container">
             <div class="about-column">
                 <img src="imagens/logo.svg" alt="" class="mb-1 mt-1">
-                <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cupiditate, molestias sint odio omnis quos illo doloribus, id laborum neque at molestiae? Tenetur quaerat minima consequuntur delectus pariatur sapiente voluptates?</p>
+                <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum cupiditate, molestias sint odio omnis quos illo doloribus?</p>
             </div>
             <nav>
                 <a href="#">Início</a>
@@ -84,7 +86,7 @@
             </nav>
             <form class="newsletter-form">
                 <label for="email" class="mb-1">Receba materiais gratuitos no seu email.</label>
-                <input type="text" name="email" id="email" placeholder="Digite o seu email">
+                <input type="text" name="email" id="email"class="mb-1" placeholder="Digite o seu email">
                 <button class="button mb-2">Quero receber</button>
             </form>
         </div>
